--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     index index.php index.html;
     server_name localhost;
 
-    root /var/www;
+    root /var/www/public;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
